--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,4 +25,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\Acme\Domain\Program\ProgramRepository: '@App\Acme\Infrastructure\DoctrineProgramRepository'
+    App\DomainEvent\Dispatcher\Doctrine:
+        tags:
+            - { name: doctrine.event_listener, event: postPersist }
+            - { name: doctrine.event_listener, event: postFlush }
