Pushed the POC forward

--- a/config/doctrine/Program.Participant.orm.yml
+++ b/config/doctrine/Program.Participant.orm.yml
@@ -12,7 +12,7 @@ App\Acme\Domain\Program\Participant:
             type: string
             length: 36
 
-    manyToMany:
+    manyToOne:
         program:
             targetEntity: App\Acme\Domain\Program\Program
             inversedBy: participants
