--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,6 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "knplabs/rad-domain-event": "^2.1",
-        "prolic/fpp": "dev-master@dev",
         "prooph/service-bus-symfony-bundle": "^0.7.0",
         "ramsey/uuid": "^3.7",
         "symfony/console": "^4.1",
@@ -20,10 +18,11 @@
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
+        "symfony/serializer": "^4.1",
+        "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
-        "phpspec/phpspec": "^4.3",
         "symfony/dotenv": "^4.1"
     },
     "config": {
