Added functionnal test examples

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
             "App\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\Functionnal\\": "features/"
+        }
+    },
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
@@ -23,7 +28,11 @@
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.1"
+        "doctrine/data-fixtures": "^1.3",
+        "guzzlehttp/guzzle": "^6.3",
+        "phpunit/phpunit": "^7.2",
+        "symfony/dotenv": "^4.1",
+        "zalas/phpunit-injector": "^1.2"
     },
     "config": {
         "bin-dir": "bin",
