Added UTC date support

--- a/config/doctrine/Program.Participant.orm.yml
+++ b/config/doctrine/Program.Participant.orm.yml
@@ -11,6 +11,8 @@ App\Acme\Domain\Program\Participant:
         userId:
             type: string
             length: 36
+        at:
+            type: datetime
 
     manyToOne:
         program:
