--- a/config/doctrine/Program.Program.orm.yml
+++ b/config/doctrine/Program.Program.orm.yml
@@ -13,6 +13,8 @@ App\Acme\Domain\Program\Program:
             type: text
         maxParticipants:
             type: integer
+        createdAt:
+            type: datetime
 
     oneToMany:
         participants:
