--- a/config/packages/prooph_service_bus.yaml
+++ b/config/packages/prooph_service_bus.yaml
@@ -8,10 +8,16 @@ services:
 
     Prooph\ServiceBus\CommandBus: '@prooph_service_bus.default_command_bus'
 
-    command_handlers:
+    acme_command_handlers:
         resource: '../../src/Acme/Application/CommandHandler/'
         namespace: App\Acme\Application\CommandHandler\
-        public: true
+        autowire: true
+        tags:
+            - { name: 'prooph_service_bus.default_command_bus.route_target', message_detection: true }
+
+    authentication_command_handlers:
+        resource: '../../src/Authentication/Application/CommandHandler/'
+        namespace: App\Authentication\Application\CommandHandler\
         autowire: true
         tags:
             - { name: 'prooph_service_bus.default_command_bus.route_target', message_detection: true }
