--- a/config/services.yaml
+++ b/config/services.yaml
@@ -16,7 +16,15 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
-        exclude: '../src/{Acme/Application,Prooph,Kernel.php}'
+        exclude: '../src/{Acme,Authentication,Prooph,Kernel.php}'
+
+    App\Acme\:
+        resource: '../src/Acme'
+        exclude: '../src/Acme/Application/CommandHandler'
+
+    App\Authentication\:
+        resource: '../src/Authentication'
+        exclude: '../src/Authentication/Application/CommandHandler'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
@@ -33,10 +41,6 @@ services:
             - { name: doctrine.event_listener, event: postUpdate }
             - { name: doctrine.event_listener, event: postRemove }
             - { name: doctrine.event_listener, event: postFlush }
-
-    App\Acme\Application\EventListener\:
-        resource: '../src/Acme/Application/EventListener'
-        tags: ['kernel.event_subscriber']
 
     App\Prooph\CommandValidationPlugin:
         tags:
