--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,16 @@
         "symfony/framework-bundle": "^4.1",
         "symfony/lts": "^4@dev",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "^4.1",
         "symfony/serializer": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
         "doctrine/data-fixtures": "^1.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "guzzlehttp/guzzle": "^6.3",
+        "justinrainbow/json-schema": "^5.2",
         "phpunit/phpunit": "^7.2",
         "symfony/dotenv": "^4.1",
         "zalas/phpunit-injector": "^1.2"
