--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -21,8 +21,8 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         mappings:
-            Acme:
+            App:
                 is_bundle: false
                 type: yml
                 dir: '%kernel.project_dir%/config/doctrine'
-                prefix: App\Acme\Domain
+                prefix: App
