--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,19 +1,8 @@
 program_index:
-    path: /
+    path: /programs
     methods: GET
     controller: App\Controller\Program::index
 
-program_show:
-    path: /{id}
-    methods: GET
-    controller: App\Controller\Program::show
-
-program_create:
-    path: /
+login_check:
+    path: /login
     methods: POST
-    controller: App\Controller\Program::create
-
-program_join:
-    path: /{id}/participants
-    methods: POST
-    controller: App\Controller\Program::join
