--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "prooph/event-sourcing": "^5.5",
         "prooph/service-bus-symfony-bundle": "^0.7.0",
         "ramsey/uuid": "^3.7",
         "symfony/console": "^4.1",
@@ -31,6 +32,7 @@
     "require-dev": {
         "doctrine/data-fixtures": "^1.3",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "friendsofphp/php-cs-fixer": "^2.12",
         "guzzlehttp/guzzle": "^6.3",
         "justinrainbow/json-schema": "^5.2",
         "phpunit/phpunit": "^7.2",
