--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,7 +34,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\DomainEvent\Dispatcher\Doctrine:
+    App\Prooph\DoctrineIntegration\EventPublisher:
         tags:
             - { name: doctrine.event_listener, event: postPersist }
             - { name: doctrine.event_listener, event: postLoad }
